DB Converter -> java 1.8 syntax